# Meeting-room-booking-service

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  docker-compose_postgres.yaml  entrypoint.sh  init_db.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0736d5ca500f_creating_a_model_booking.py  0da3db43ec65_change_model_user.py  0ee71c0bf43b_correction_table_users.py  18eea94a2750_fixes_for_models.py  4b2b58f81fce_changing_the_name_of_the_user_model_.py  ad37ae1e3ebf_init_migration.py  b9141806106b_change_field_name_of_model_user.py  e7cf4def8ee0_change_field_login_to_username.py  f41d2e4540d3_creating_a_model_room.py
main/: alembic.ini  database.py  models.py  routes.py
main/alembic/: env.py
src/: dao.py  database.py  dependencies.py  exceptions.py  logger.py  main.py  settings.py
src/auth/: dao.py  routes.py  schemas.py  service.py
src/bookings/: models.py  routes.py  schemas.py  service.py
src/tests/: conftest.py
src/tests/auth/: test_routes.py  test_schemas.py
src/tests/bookings/: test_routes.py  test_schemas.py
src/tests/users/: test_routes.py
src/users/: models.py  routes.py  schemas.py  service.py
