[project]
name = "meeting-room-booking-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgeny Fedorov",email = "stackltd@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite (==0.21.0)",
    "alembic (==1.16.2)",
    "asyncpg (==0.30.0)",
    "bcrypt (==5.0.0)",
    "cryptography (==48.0.0)",
    "fastapi (==0.115.14)",
    "isort (==6.0.1)",
    "passlib (==1.7.4)",
    "pip (==23.2.1)",
    "pipdeptree (==3.1.0)",
    "psycopg2-binary (==2.9.12)",
    "pyjwt (==2.13.0)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.32)",
    "uvicorn (==0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
